# wakamore

./: Cargo.toml  LICENSE  README.md  bindings.toml
bms/: Cargo.toml
bms/src/: lib.rs  parser.rs
bms/tests/: parse_bms.rs  test.bms
common/: Cargo.toml
common/src/: lib.rs
emitter/: Cargo.toml
emitter/src/: lib.rs
input/: Cargo.toml
input/src/: lib.rs
src/: component.rs  main.rs  system.rs
src/component/: fps.rs  note.rs
src/entity/: note.rs
src/event/: note.rs
src/resource/: note.rs
src/system/: note.rs  note_animate.rs  note_input.rs  note_judge.rs  note_ui.rs
wakamore/: Cargo.toml
wakamore/src/: component.rs  main.rs  system.rs
wakamore/src/component/: fps.rs  note.rs
wakamore/src/event/: note.rs
wakamore/src/resource/: note.rs
wakamore/src/state/: mod.rs  playing.rs  result.rs  title.rs
wakamore/src/system/: input_log.rs  key_event_log.rs  note_animate.rs  note_input.rs  note_judge.rs  note_spawn.rs  note_ui.rs
wakamore_render/: Cargo.toml
wakamore_render/src/: lib.rs
