[package]
name = "wakamore"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
rand = { version = "0.10.0", features = ["std", "thread_rng", "sys_rng"] }
common = { path = "../common" }
input = { path = "../input" }
emitter = { path = "../emitter" }
bms = { path = "../bms" }

[package.metadata]
